using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Keyword 
{
    public static string SCENE_INGAME = "In Game";
    public static string SCENE_ENDING = "Ending";
    public static string SCENE_MAINMENU = "Main Menu";

    public static string FIRE_PARTICLES = "fire.particles";

    public static string PS_FIRE_ALPHA = "PS_Fire_ALPHA";
    public static string PS_FIRE_ADDITIVE = "PS_Fire_ADDITIVE";
    public static string PS_FIRE_GLOW = "PS_Fire_GLOW";
    public static string PS_FIRE_SPARK = "PS_Fire_Spark";

    public static string TAG_PICKABLE_ITEM = "pickable.item";
    public static string ITEM_NAME_HYDRAN = "HYDRAN";
    public static string ITEM_NAME_MASK = "MASKER";
    public static string ITEM_NAME_KUNCI = "KUNCI";
    public static string ITEM_NAME_KAYU = "KAYU";
    public static string ITEM_MASK = "item.mask";
    public static string ITEM_HYDRAN = "item.hydran";
    public static string ITEM_KUNCI = "item.kunci";
    public static string ITEM_KAYU = "item.kayu";

    public static string TAG_NARATION_TRIGGER = "naration.trigger";
    public static string NARASI_TRIGGER_1B = "narasi.1b";
    public static string NARASI_TRIGGER_3A = "narasi.3a";
    public static string NARASI_TRIGGER_3C = "narasi.3c";
    public static string NARASI_TRIGGER_4B = "narasi.4b";
    public static string NARASI_TRIGGER_4C = "narasi.4c";

    public static string TAG_CUTSCENE_TRIGGER = "cutscene.trigger";
    public static string CUTSCENE_2 = "cutscene.2";

    public static string CUTSCENE_ENDING= "cutscene.ending";

    public static string ANIM_PARAMETER_ISMOVING = "isMoving";
    public static string ANIM_PARAMETER_MOVEMENTSPEED = "movementSpeed";
    public static string ANIM_PARAMETER_ISPUT = "isPut";
    public static string ANIM_PARAMETER_ISSHAKING = "isShaking";
    public static string ANIM_PARAMETER_ISSPRAYING = "isSpraying";
    public static string ANIM_PARAMETER_TOGGLESTATE = "toggleState";
    public static string ANIM_PARAMETER_CUTSCENEORDER = "cutsceneOrder";
    public static string ANIM_PARAMETER_ISGAMEOVER = "isGameOver";
    public static string ANIM_PARAMETER_ISDOWN = "isDown";

    public static string TOGGLE_FREELOOK = "freelook.toggle";
}
